criado as divs para divisoes de users no chat

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         </div>
         <div class="main">
           <div class="article">
-            <div class="user"></div>
-            <div class="usertwo"></div>
+            <div class="mensage"></div>
+            <div class="mensage enter-room"></div>
+            <div class="mensage private"></div>
           </div>
         </div>
       </div>
