criado o footer do chat

--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@
         </div>
         <div class="main">
           <div class="article">
-            <div class="mensage"></div>
+            <div class="mensage">
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non,
+                sit! Ut modi eaque suscipit repellat quisquam laudantium non,
+                officiis maiores quod ea dolor, accusantium soluta sint
+                voluptates dignissimos, tempore quasi.
+              </p>
+            </div>
             <div class="mensage enter-room"></div>
             <div class="mensage private"></div>
           </div>
         </div>
+      </div>
+      <div class="footer">
+        <input class="send-text" type="text" />
+        <img src="imagens/send.svg" />
       </div>
     </div>
     <script
