criado classe de display none

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="imagens/send.svg" onclick="send-text" />
         </div>
       </div>
-      <aside class="navbar">
+      <aside class="navbar diplay-none">
         <nav class="nav">
           <div class="sidebar">
             <div class="list contact-list">
