criado a classe para icone de people

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="img-logo">
             <img src="imagens/logouol.svg" />
           </div>
-          <ion-icon name="people"></ion-icon>
+          <ion-icon name="people" class="people-icon"></ion-icon>
         </div>
         <div class="main">
           <div class="article">
