modificado a estrutura do footer

--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
             </ul>
           </article>
         </div>
-      </div>
-      <div class="footer">
-        <div class="write-text">
-          <input type="text" />
-          <img src="imagens/send.svg" onclick="send-text" />
+        <div class="footer">
+          <div class="write-text">
+            <input type="text" class="message" placeholder="Escreva aqui" />
+            <button class="send-button" onclick="send-text">
+              <img src="imagens/send.svg" />
+            </button>
+          </div>
         </div>
       </div>
       <aside class="navbar diplay-none">
