--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="comand.js"></script>
   </body>
 </html>
