--- a/index.html
+++ b/index.html
@@ -24,65 +24,7 @@
         </div>
         <div class="main">
           <article class="chat">
-            <ul class="messages">
-              <li class="message enter-room">
-                <p>
-                  <span class="message-time">(09:21:45)</span>
-                  <span class="message-user">João</span>
-                  <span class="message-data">entrou na sala</span>
-                </p>
-              </li>
-              <li class="message">
-                <p>
-                  <span class="message-time">(09:21:45)</span>
-                  <span class="message-user">Maria</span>
-                  <span class="message-user-to">
-                    para <span class="message-user">João</span></span
-                  >
-                  :
-                  <span class="message-data">Oi joão</span>
-                </p>
-              </li>
-              <li class="message">
-                <p>
-                  <span class="message-time">(09:21:45)</span>
-                  <span class="message-user">Maria</span>
-                  <span class="message-user-to">
-                    para <span class="message-user">João</span></span
-                  >
-                  :
-                  <span class="message-data"
-                    >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolorem, quos eos. Quas consequuntur error repudiandae ipsam
-                    nam, et quae molestias provident distinctio voluptate sed
-                    quasi quisquam, accusamus, quos vero saepe.
-                  </span>
-                </p>
-              </li>
-              <li class="message private">
-                <p>
-                  <span class="message-time">(09:21:45)</span>
-                  <span class="message-user">Maria</span>
-                  <span class="message-user-to">
-                    para <span class="message-user">João</span></span
-                  >
-                  :
-                  <span class="message-data"
-                    >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolorem, quos eos. Quas consequuntur error repudiandae ipsam
-                    nam, et quae molestias provident distinctio voluptate sed
-                    quasi quisquam, accusamus, quos vero saepe.
-                  </span>
-                </p>
-              </li>
-              <li class="message exit-room">
-                <p>
-                  <span class="message-time">(09:21:45)</span>
-                  <span class="message-user">Maria</span>
-                  <span class="message-data">sai da sala</span>
-                </p>
-              </li>
-            </ul>
+            <ul class="messages"></ul>
           </article>
         </div>
         <div class="footer">
